@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/bug-buddy
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/bug-buddy/ChangeLog,v 1.160 2009/04/22 00:40:09 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/bug-buddy/ChangeLog,v 1.161 2009/04/27 13:38:29 jer Exp $
+
+  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> bug-buddy-2.24.2:
+  Stable for HPPA (bug #260063).
 
   22 Apr 2009; Mart Raudsepp <leio@gentoo.org> -bug-buddy-2.20.1.ebuild,
   -bug-buddy-2.24.1.ebuild:
